handle SpotBugs warnings